@@ -642,16 +642,16 @@
         return instance.String(__toJSON.call(this));
       };
 
-    numPlugin.toExponential = function toExponential() {
-      return instance.Number(__toExponential.call(this));
+    numPlugin.toExponential = function toExponential(fractionDigits) {
+      return instance.String(__toExponential.call(this, fractionDigits));
     };
 
-    numPlugin.toFixed = function toFixed() {
-      return instance.Number(__toFixed.call(this));
+    numPlugin.toFixed = function toFixed(fractionDigits) {
+      return instance.String(__toFixed.call(this, fractionDigits));
     };
 
-    numPlugin.toPrecision = function toPrecision() {
-      return instance.Number(__toPrecision.call(this));
+    numPlugin.toPrecision = function toPrecision(precision) {
+      return instance.String(__toPrecision.call(this, precision));
     };
 
     rePlugin.exec = function exec(string) {
